--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Blog/Index">Blog manager</a>
                         </li>
+                        <partial name="_LoginPartial"/>
                     </ul>
                 </div>
             </div>
